убран лишний код, добавлена пагинация